Fixed styling issue where buttons wouldn't style on iOS

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,3 +1,7 @@
+html {
+    touch-action: manipulation;
+}
+
 body {
     height: 100%;
     padding: 30px;
